--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   
 <h1>Heading level 1</h1>
+  <p>This is a paragraph element. This is where we write things dude.</p>
 <h2>Heading level 2</h2>
 <h3>Heading level 3</h3>
 <h4>Heading level 4</h4>
