add headings/ lists

--- a/index.html
+++ b/index.html
@@ -10,9 +10,22 @@
 <body>
   
 <h1>Heading level 1</h1>
-  <p>This is a paragraph element. This is where we write things dude.</p>
+  <p>This is a paragraph element. This is where we write things dude. <br> This is where we throw a break into the code son.</p>
 <h2>Heading level 2</h2>
+  <blockquote> Technology sucks dude. </blockquote>
 <h3>Heading level 3</h3>
+  <ol>
+    <li>Blue</li>
+    <li>Teal</li>
+    <li>Red</li>
+  </ol>
+  
+  <ul>
+    <li>John Wayne</li>
+    <li>Patrick Swayze</li>
+    <li>Tom Selleck</li>
+  </ul>
+  
 <h4>Heading level 4</h4>
 <h5>Heading level 5</h5>
 <h6>Heading level 6</h6>
