--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <li>Patrick Swayze</li>
     <li>Tom Selleck</li>
   </ul>
-  
 <h4>Heading level 4</h4>
+  <p> This is another paragraph & an ampersand with it. "This sucks." </p>
 <h5>Heading level 5</h5>
 <h6>Heading level 6</h6>
  
