--- a/Semantics.html
+++ b/Semantics.html
@@ -2,12 +2,31 @@
 <html>
 
 <head>
+  <title>Trillium Media Design</title>
 </head>
 
 <body>
-</body>
-
-
+  <header>
+    <h1> Trillium Media Design</h1>
+  </header>
+  
+  <nav>
+    <b>Home &nbsp; Services &nbsp; Contact</b>
+  </nav>
+  
+  <main>
+    <h2> New Media and Web Design</h2>
+    <p> Trillium Media Design offer...</p>
+    
+    <h2>Meeting Your Buisness Needs</h2>
+    <p>Our expert designers...</p>
+    <footer>
+      <small><i>Copyright &copy; 2020 Zach Bartlett</i></small>
+    </footer>
+  </main>
+  
+  <a href = "https://www.wscc.edu/">WSCC</a>
+ </body>
 
 
 </html>
